<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Check this out!</string>
    <string name="hint">The switch is now on</string>
    <string name="text">CLICK HERE</string>
    <string name="EditText">Type here</string>
    <string name="Textsize">Look at my GUI</string>
    <string name="radio">Switch on / off</string>
    <string name="message">The switch is now on</string>
    <string name="switchMsg">The switch is now</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="undo">undo</string>

    <string name="TextView1">Enter your email address:</string>
    <string name="hint1">Type email here</string>
    <string name="TextView2">Type your password:</string>
    <string name="text1">LOGIN</string>


    <string name="TextView4">Your profile</string>
    <string name="TextView5">Your name:</string>
    <string name="hint2">Enter your name</string>
    <string name="TextView6">Your email:</string>
    <string name="hint3">Enter your email</string>
    <string name="TextView7">Your picture:</string>
    <string name="TextView8">Click the button above to take a picture</string>

    <string name="text10">Go to chat</string>
    <string name="text12">SEND</string>
    <string name="text13">RECEIVE</string>
    <string name="hint4">Type here</string>

    <string name="GoToWeather">Go to Weather</string>

    <string name="MessageHere">Message Here</string>
    <string name="idText">ID=</string>
    <string name="fragmentMessageCheckBox">Is a Send Message</string>
    <string name="hide">HIDE</string>

</resources>