<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextView4"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextView5"
        />

    <EditText
        android:id="@+id/Text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/emailInput2"
        ></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextView6"
        />

    <EditText
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint3"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/pictureBtn"
        android:nextFocusUp="@+id/pictureBtn"
        ></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextView7"
        />


    <ImageButton
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusDown="@+id/emailInput3"
        android:nextFocusUp="@id/goToChat"
    ></ImageButton>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/TextView8"
        />

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text10"
        android:nextFocusUp="@+id/goToChat"
        ></Button>

    <Button
        android:id="@+id/GoToWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoToWeather"
        ></Button>

</LinearLayout>