<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragmentLocation">

        <TextView
            android:id="@+id/fMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MessageHere"/>

        <TextView
            android:id="@+id/fMessageId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idText"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmentMessageCheckBox" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>


</LinearLayout>