<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/theListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/addButton3"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/addButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text12"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:id="@+id/text11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/addButton3"
        android:layout_toLeftOf="@id/addButton4"
        android:layout_alignParentBottom="true"
        android:hint="@string/hint4"
        ></EditText>

    <Button
        android:id="@+id/addButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text13"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>